--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,7 +15,7 @@ jobs:
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      MODEL: openai/gpt-4.1  # default model (can override via env if needed)
+      MODEL: openai/gpt-4.1  # default model
 
     steps:
       - name: Checkout repository
@@ -60,7 +60,7 @@ jobs:
         run: |
           git show --no-color --no-ext-diff --unified=0 HEAD > update.patch
 
-      # Rolling (incremental) summarization to avoid 413s and YAML heredoc pitfalls
+      # Rolling (incremental) summarization to avoid 413s; YAML-safe (no tricky inline quotes)
       - name: Generate summary with GitHub Models (rolling, 413-safe)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -75,31 +75,39 @@ jobs:
 
           # Split the patch into small chunks; lower to 30000 if you still hit 413
           CHUNK_BYTES=${CHUNK_BYTES:-60000}
-          rm -f chunk_* response*.json COMMENT.md || true
+          rm -f chunk_* response*.json COMMENT.md msg.txt prompt.txt || true
           split -b "$CHUNK_BYTES" -d -a 3 update.patch chunk_ || true
+          if ! ls chunk_* >/dev/null 2>&1; then cp update.patch chunk_000; fi
 
-          # Start with disclaimer
+          # Static instructions (written once)
+          cat > prompt.txt <<'PROMPT'
+You are a concise update summarizer for an automated Kubebuilder scaffold update.
+Task: Update the running summary below based on the NEW diff chunk.
+Requirements:
+- Keep it tight (<= 300 words).
+- Use Markdown only (no raw diff snippets).
+- If you see conflict markers (<<<<<<<, =======, >>>>>>>), add a **Conflicts** section:
+  - Cause, how to resolve, recommended next steps.
+PROMPT
+
           summary="**AI-generated summary (may contain errors).**"
-
-          # If there are no chunks (tiny patch), create one empty chunk file
-          if ! ls chunk_* >/dev/null 2>&1; then
-            cp update.patch chunk_000
-          fi
-
           i=0
-          for f in chunk_*; do
-            prompt=$'You are a concise update summarizer for an automated Kubebuilder scaffold update.\n\
-Task: Update the running summary below based on the NEW diff chunk.\n\
-Requirements:\n\
-- Keep it tight (<= 300 words).\n\
-- Use Markdown only (no raw diff snippets).\n\
-- If you see conflict markers (<<<<<<<, =======, >>>>>>>), add a **Conflicts** section:\n\
-  - Cause, how to resolve, recommended next steps.'
+          for f in $(ls -1 chunk_* | sort); do
+            {
+              cat prompt.txt
+              echo
+              echo "Current summary:"
+              echo "<<<"
+              printf '%s\n' "$summary"
+              echo ">>>"
+              echo
+              echo "New diff chunk:"
+              echo "<<<"
+              cat "$f"
+              echo ">>>"
+            } > msg.txt
 
-            # Build message without heredocs
-            msg=$"$prompt\n\nCurrent summary:\n<<<\n$summary\n>>>\n\nNew diff chunk:\n<<<\n$(cat "$f")\n>>>\n"
-
-            body=$(jq -n --arg model "$MODEL" --arg content "$msg" \
+            body=$(jq -n --arg model "$MODEL" --rawfile content msg.txt \
               '{ model: $model,
                  messages: [ { "role":"user", "content": $content } ],
                  max_tokens: 1200,
